--- a/src/index.css
+++ b/src/index.css
@@ -13,14 +13,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  font-size: 20px;
 }
-a:hover {
-  color: #535bf2;
+
+html {
+  scroll-behavior: smooth;
 }
+
 
 body {
   margin: 0;
@@ -30,39 +34,44 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.list-card {
+  display: grid;
+  grid-template-columns: auto auto auto;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.card {
+  padding: 1em;
+  border: 2px solid #ffffff;
+  border-radius: 12px;
+  margin: 5px;
 }
-button:hover {
-  border-color: #646cff;
+
+.card:hover {
+  border: 2px solid #747bff;
+  transition: ease 0.3s;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+.img-card {
+  width: 256px;
+  height: 256px;
 }
+
 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
+  }
+
+  .card {
+    border: 2px solid #242424;
   }
 }
